force-app/main/default/objects/Test__c/Test__c.object-meta.xml
<CustomObject>
    <description>An instance of a student taking a test.</description>
    <label>Test</label>
    <nameField>
        <displayFormat>TST-{0000}</displayFormat>
        <label>Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>