force-app/main/default/objects/Test__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <description>The date the test score is added to the system, either by manual upload or directly from an official source.</description>
    <inlineHelpText>The date the test score is added to the system, either by manual upload or directly from an official source.</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>