force-app/main/default/objects/Test__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Indicates whether the applicant or an official source reported this test.</description>
    <inlineHelpText>Indicates whether the applicant or an official source reported this test.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self Reported</fullName>
            </value>
            <value>
                <fullName>Official</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>