force-app/main/default/objects/Test__c/fields/Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Date__c</fullName>
    <description>The date the applicant or official source indicates the test was started.</description>
    <inlineHelpText>The date the applicant or official source indicates the test was started.</inlineHelpText>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>