force-app/main/default/objects/Test__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <description>The formal name for the test taken.</description>
    <inlineHelpText>The formal name for the test taken.</inlineHelpText>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SAT</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>GRE</fullName>
            </value>
            <value>
                <fullName>GMAT</fullName>
            </value>
            <value>
                <fullName>TOEFL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>